...
"About" = "About";

/* No comment provided by engineer. */
"About put.io" = "About put.io";

/* No comment provided by engineer. */
"Account" = "Account";

/* No comment provided by engineer. */
"Amsterdam" = "Amsterdam";

/* No comment provided by engineer. */
"Ascending" = "Ascending";
...
"File not reachable" = "File not reachable";

/* No comment provided by engineer. */
"File Unavailable" = "File Unavailable";

/* No comment provided by engineer. */
"Files" = "Files";

/* No comment provided by engineer. */
"Folder Name" = "Folder Name";

/* Audio player controls. */
"Forward 15 seconds" = "Forward 15 seconds";

/* No comment provided by engineer. */
"Go Back" = "Go Back";

/* No comment provided by engineer. */
"History" = "History";

/* No comment provided by engineer. */
"I have saved my recovery codes" = "I have saved my recovery codes";

/* No comment provided by engineer. */
"In Queue" = "In Queue";
...
"Recovering..." = "Recovering...";

/* No comment provided by engineer. */
"Regenerate" = "Regenerate";

/* No comment provided by engineer. */
"Rename" = "Rename";

/* No comment provided by engineer. */
"Rename %@" = "Rename %@";

/* No comment provided by engineer. */
"Reset all sort settings" = "Reset all sort settings";
...
